# bbs-fw

./: .clang-format  .editorconfig  .gitattributes  .pre-commit-config.yaml  Configuration.cs  ConfigurationViewModel.cs  IDEAS.md  PROTOCOL.md  README.md  SystemView.xaml  app.c  cfgstore.c  cfgstore.h  fwconfig.h  motor.c
.github/: FUNDING.yml
code/firmware/: .gitignore  CMakeLists.txt  CMakePresets.json  tohex.bat
code/firmware/cmake/: sdcc-8051-toolchain.cmake  sdcc-stm8-toolchain.cmake
code/firmware/lib/stm8s/: CMakeLists.txt
code/firmware/lib/stm8s/include/stm8/: stm8s.h  stm8s_adc1.h  stm8s_adc2.h  stm8s_awu.h  stm8s_beep.h  stm8s_can.h  stm8s_clk.h  stm8s_exti.h  stm8s_flash.h  stm8s_gpio.h  stm8s_i2c.h  stm8s_itc.h  stm8s_iwdg.h  stm8s_rst.h  stm8s_spi.h  stm8s_tim1.h  stm8s_tim2.h  stm8s_tim3.h  stm8s_tim4.h  stm8s_tim5.h  stm8s_tim6.h  stm8s_uart1.h  stm8s_uart2.h  stm8s_uart3.h  stm8s_uart4.h  stm8s_wwdg.h
code/firmware/src/: adc.h  app.c  app.h  battery.c  battery.h  cfgstore.c  cfgstore.h  eeprom.h  eventlog.c  eventlog.h  extcom.c  extcom.h  fwconfig.h  intellisense.h  interrupt.h  lights.h  main.c  motor.h  sensors.h  system.h  throttle.c  throttle.h  timers.h  uart.h  util.h  version.h  watchdog.h
code/firmware/src/bbsx/: adc.c  cpu.h  eeprom.c  interrupt.h  lights.c  motor.c  pins.h  sensors.c  stc15.h  system.c  timers.c  timers.h  uart.c  uart_motor.h  watchdog.c
code/firmware/src/tsdz2/: adc.c  cpu.h  eeprom.c  interrupt.h  lights.c  motor.c  pins.h  sensors.c  stm8.h  system.c  timers.c  timers.h  torquesensor.c  uart.c  watchdog.c
code/logger/: platformio.ini
code/logger/include/: ComProxy.h
code/logger/src/: ComProxy.cpp  Main.cpp
code/tool/: App.xaml  App.xaml.cs  AssemblyInfo.cs  bbs-fw-tool.csproj  bbs-fw-tool.sln
code/tool/Model/: BbsfwConnection.cs  CompletionQueue.cs  Configuration.cs  EventLogEntry.cs
code/tool/Properties/: Settings.Designer.cs  Settings.settings
code/tool/View/: AssistLevelCruiseView.xaml  AssistLevelCruiseView.xaml.cs  AssistLevelPasView.xaml  AssistLevelPasView.xaml.cs  AssistLevelThrottleView.xaml  AssistLevelThrottleView.xaml.cs  AssistLevelsView.xaml  AssistLevelsView.xaml.cs  CalibrationView.xaml  CalibrationView.xaml.cs  ConnectionView.xaml  ConnectionView.xaml.cs  EventLogView.xaml  EventLogView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SystemView.xaml  (+1 more)
drawings/pcb/: bbshd.sch  eagle.epf
firmware/: DISASSEMBLY_NOTES.txt
src/: .gitignore  app.c  app.h  bbshd-fw.sln  bbshd-fw.vcxproj  bbshd-fw.vcxproj.filters  cfgstore.c  cfgstore.h  eventlog.c  eventlog.h  extcom.c  interrupt.h  main.c  makefile  motor.c  motor.h  pas.c  pas.h  sensors.c  speed_sensor.c  speed_sensor.h  stc15.h  system.c  system.h  throttle.c  throttle.h  tohex.bat  uart.c  uart.h  util.h  watchdog.c  watchdog.h
src/firmware/: Makefile  adc.c  adc.h  app.c  app.h  battery.c  battery.h  bbs-fw.sln  bbs-fw.vcxproj  bbs-fw.vcxproj.filters  bbshd-fw.vcxproj  bbshd-fw.vcxproj.filters  cfgstore.c  cfgstore.h  clean.bat  eeprom.c  eeprom.h  eventlog.c  eventlog.h  extcom.c  extcom.h  filter.c  filter.h  fwconfig.h  intellisense.h  interrupt.h  lights.c  lights.h  main.c  makefile  motor.c  motor.h  pins.h  sensors.c  sensors.h  stc15.h  system.c  system.h  throttle.c  throttle.h  (+10 more)
src/logger/: platformio.ini
src/tool/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  bbs-fw-tool.csproj  bbshd-fw-tool.csproj  bbshd-fw-tool.sln
(+87 files in other folders)
