
add_library(stm8s INTERFACE
    "include/stm8/stm8s_adc1.h"
    "include/stm8/stm8s_adc2.h"
    "include/stm8/stm8s_awu.h"
    "include/stm8/stm8s_beep.h"
    "include/stm8/stm8s_can.h"
    "include/stm8/stm8s_clk.h"
    "include/stm8/stm8s_exti.h"
    "include/stm8/stm8s_flash.h"
    "include/stm8/stm8s_gpio.h"
    "include/stm8/stm8s_i2c.h"
    "include/stm8/stm8s_itc.h"
    "include/stm8/stm8s_iwdg.h"
    "include/stm8/stm8s_rst.h"
    "include/stm8/stm8s_spi.h"
    "include/stm8/stm8s_tim1.h"
    "include/stm8/stm8s_tim2.h"
    "include/stm8/stm8s_tim3.h"
    "include/stm8/stm8s_tim4.h"
    "include/stm8/stm8s_tim5.h"
    "include/stm8/stm8s_tim6.h"
    "include/stm8/stm8s_uart1.h"
    "include/stm8/stm8s_uart2.h"
    "include/stm8/stm8s_uart3.h"
    "include/stm8/stm8s_uart4.h"
    "include/stm8/stm8s_wwdg.h"
    "include/stm8/stm8s.h"
)

target_include_directories(stm8s INTERFACE include)